--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Cypress run
         uses: cypress-io/github-action@v5
-        working-directory: client
-             build: npm run build
-             start: npm start
+        with:
+          build: npm run build
+          start: npm start
