--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,6 @@ jobs:
      - name: Run Cypress Test
        uses: cypress-io/github-action@v5
        with:
+         browser: chrome
          command: npx cypress run
-         browser: firefox
+        
