--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,12 @@ jobs:
  Cypress-Test:
    runs-on: ubuntu-latest
    steps:
-     - name: Checkout GitCode
-       uses: actions/checkout@v2
+     - name: E2E Tests on Chrome
+       uses: actions/checkout@v3
  
      - name: Run Cypress Test
        uses: cypress-io/github-action@v5
        with:
-         browser: chrome
          command: npx cypress run
-        
+         browser: chrome
+         
