--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,10 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - name: E2E Tests on Chrome
-       uses: actions/checkout@v3
- 
-     - name: Run Cypress Test
-       uses: cypress-io/github-action@v5
+     - uses: actions/checkout@v3
+     - uses: cypress-io/github-action@v5
        with:
          command: npx cypress run
          browser: chrome
+         
          
